--- a/packages/mirinae/src/feedbacks/alert/toast-alert/PToastAlert.stories.mdx
+++ b/packages/mirinae/src/feedbacks/alert/toast-alert/PToastAlert.stories.mdx
@@ -3,7 +3,7 @@ import Vue from 'vue';
 import PToastAlert from '@/feedbacks/alert/toast-alert/PToastAlert.vue';
 import PButton from '@/inputs/buttons/button/PButton.vue';
 
-import { Meta, Canvas, Story, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Canvas, Story, ArgsTable } from '@storybook/blocks';
 import { getToastAlertArgTypes } from '@/feedbacks/alert/toast-alert/story-helper';
 
 
